syntax = "proto3";

package sec13;

option java_multiple_files = true;
option java_package = "com.vinsguru.models.sec13";

message BalanceCheckRequest {
  int32 account_number = 1;
}

message AccountBalance {
  int32 account_number = 1;
  int32 balance = 2;
}

message WithdrawRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

message Money {
  int32 amount = 1;
}

service BankService {

  // unary
  rpc GetAccountBalance(BalanceCheckRequest) returns (AccountBalance);

  // server streaming
  rpc Withdraw(WithdrawRequest) returns (stream Money);

}